--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ PORT=3001
 # Format: http://domain:port ou https://domain
 APP_HOST=http://localhost
 API_PREFIX=serviceterritoriale
+
+JWT_ACCESS_SECRET=access_secret_ultra_fort_123
+JWT_REFRESH_SECRET=refresh_secret_ultra_fort_456
